--- a/vue/diretiva.html
+++ b/vue/diretiva.html
@@ -28,7 +28,7 @@
         <hr>
 
         <p>
-        Agora crie a sua listinha digitando os ítens na barra abaixo e dando enter após cada um. Você pode marcar e desmarcar os ítens da listinha clicando neles.
+        Agora crie a sua listinha digitando os itens na barra abaixo e dando enter após cada um. Você pode marcar e desmarcar os itens da listinha clicando neles.
         </p>
                 
         <input type="text" v-model="textDigitado"
